--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,7 +38,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Simulation Test</a>
+            <a class="navbar-brand" href="/">Simulation Exercise</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
